projet_gl/src/test/deca/context/valid/3_17/3_17_3_DeclVal.deca
// Description:
//    Programme déclaration de variable de type int avec Initialization
//
// Resultats:
//    ok
//
// Historique:
//    cree le 18/01/2024

{
        int var = 1;
}