projet_gl/src/test/deca/context/invalid/3_17/3_17_2_Decl_Var.deca
// Description:
//    Problème de redéclaration de variable
//
// Resultats:
//    Ligne 12: Variable is redeclared.
// 
// Historique:
//    cree le 09/01/2024

{   
   int var1;
   int var1;
}
